commit f45a443fb1d2be0fcd5a15d95df6cfa3744f4629 (HEAD -> master, tag: v1.0.0)
Date:   Mon Jan 24 21:48:48 2022 +0100

    First release worthy version. All primary components are functional.

commit 1929526c4225566378c4e116188a92168916c812 (tag: v0.0.1)
Date:   Wed Nov 24 16:02:30 2021 +0100

    added include to arduino.h in roundrobintasks.h
    added release.py, script to automate release. I am yet to add the version number to the program
    Also added the release task to tasks.json

commit 38ec3f036b06db4ad0ce8e871dddae0c907fca0f (tag: v0.0.0)
Date:   Tue Nov 23 16:30:53 2021 +0100

    upaded the documentation. Also deleted some nonsense I once wrote